# airflow-reservations

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  benchmark_get_entry.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api
e2e/: .gitignore  README.md  docker-compose.airflow-3.yml  docker-compose.yml  run_test.sh
e2e/dags/: reservations_config.json  test_reservation_dag.py
examples/: masthead_config.json
src/airflow_reservations/: __init__.py  config.py  policy.py
src/airflow_reservations_policy/: __init__.py  config.py  policy.py
src/masthead_airflow_policy/: __init__.py  config.py  policy.py
tests/: test_config.py  test_policy.py
tests/e2e/: README.md  docker-compose.airflow-3-standalone.yml  docker-compose.yml  run_e2e_test.sh
tests/e2e/dags/: reservations_config.json  test_reservation_dag.py
tests/e2e/lib/: common.sh
