[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-reservations"
dynamic = ["version"]
description = "Airflow Cluster Policy for BigQuery reservation management"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Apache Airflow",
    "Topic :: Database",
]
keywords = ["airflow", "bigquery", "reservations", "capacity", "masthead"]
dependencies = [
    "apache-airflow>=2.6",
    "apache-airflow-providers-google>=10.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==6.0.0",
    "black==26.1.0",
    "hatch==1.16.3",
]

[project.urls]
Homepage = "https://mastheadata.com"
Repository = "https://github.com/masthead-data/airflow-reservations"

[tool.hatch.version]
path = "src/airflow_reservations/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/tests",
  "Makefile",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_reservations"]

[project.entry-points.'airflow.policy']
airflow_reservations = "airflow_reservations.policy"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Exclude e2e DAG files from collection
norecursedirs = ["tests/e2e/dags"]
